# devm

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  HANDOFF-sbx-quirk-6.md  HANDOFF.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  go.mod  go.sum  justfile
.github/workflows/: ci.yml  recipes-release.yml  release.yml
cmd/demo-shell-ux/: main.go
cmd/devm/: daemon_check.go  denials.go  handshake.go  handshake_test.go  helper_plist.go  main.go  main_test.go  portbinder_plist.go  recipes.go  reconcile.go  reconcile_test.go  route.go  route_test.go  secret.go  secret_test.go  service.go  service_test.go  shell.go  skills.go  softnet.go  status.go  status_test.go  stop.go  teardown.go  term.go  unlock.go  upgrade.go  validate.go  version.go  version_test.go
cmd/devm-agent/: main.go  main_test.go  scanner.go  scanner_test.go
cmd/devm-docker-shim/: main.go  main_test.go
cmd/devm-helper/: main.go  main_test.go
cmd/devm-portbinder/: group_darwin.go  group_helper.go  main.go  main_test.go
cmd/devm-runc-shim/: main.go  main_test.go
docs/: sbx-port-investigation.md  sbx-quirks.md
e2e/: README.md  conftest.py  pyproject.toml  test_01_cold_start.py  test_02_concurrent_shells_share_sandbox.py  test_02_shortcut_path.py  test_03_stop.py  test_03_stop_with_prompt.py  test_04_stop_with_yes.py  test_05_teardown.py  test_05_teardown_with_prompt.py  test_06_teardown_with_yes.py  test_07_invariant_happy_path.py  test_08_reconcile_live_port.py  test_09_reconcile_nontty_exits2.py  test_09_reconcile_prompt_flow.py  test_100_daemon_restart_seam.py  test_101_reconcile_heals_missing_proxy.py  test_102_reconcile_heals_secret_structure.py  test_103_report_missing_proxy_no_heal.py  test_103_status_reports_missing_does_not_heal.py  test_104_command_warns_and_proceeds.py  test_105_status_all_reports_missing.py  test_106_adopted_alive_no_churn.py  test_10_reconcile_yes_stops.py  test_110_direct_cold_start.py  test_111_direct_live.py  test_112_direct_host_process_no_docker.py  test_112_direct_persist_and_hostproc.py  test_113_direct_validation.py  test_114_templates_stage_failure_tears_down.py  test_115_scripts_install_ref.py  test_11_env_inject_and_live_change.py  test_120_config_lock.py  test_12_ports_remove_change.py  test_13_network_add.py  test_14_install_change_recreate.py  test_15_network_remove.py  test_16_reconcile_live_nontty.py  test_17_template_renders_before_startup.py  (+201 more)
e2e/contract/softnet/: .gitignore  go.mod  go.sum  main.go
e2e/helpers/: __init__.py  contract.py  devm.py  direct.py  exec_retry.py  interop.py  iron_proxy.py  lifecycle.py  pool.py  portbinder.py  proxy.py  registry.py  sbx.py  sbx_kit.py  shell.py  softnet.py  tart.py  workspace.py
e2e/probes/probe-anchor-lifetime/: main.go
e2e/probes/probe-cold-start/: main.go
e2e/probes/probe-exec-basic/: main.go
e2e/probes/probe-publish/: .gitignore  main.go
e2e/probes/probe-publish-triggered/: main.go
e2e/probes/probe-stdin-fix/: main.go
e2e/scripts/: run.sh  sweep-leftovers.sh  sweep.sh
e2e/spike/: go.mod  main.go  main_test.go
e2e/tests/: test_helpers_smoke.py
image/: README.md  build.sh  devm-caddy.service  devm-dns.service  devm-ready.target  devm.target  embed.go  firstrun.sh  nftables-locked.conf  preseed.cfg  provision-base.sh
internal/agent/: embed.go  embed_test.go
internal/config/: load.go  load_test.go  merge.go  merge_test.go  ports.go  ports_test.go
internal/debuglog/: debuglog.go
internal/devmbundle/: bundle.go  bundle_test.go  paths.go
internal/docker/: allowlist.go  allowlist_test.go  embed.go  embed_test.go  install.go  install_test.go  writeshim.go
internal/helper/: client.go  client_test.go  embed.go  path.go  path_test.go
internal/identity/: identity.go  identity_test.go
internal/image/: builder.go  builder_test.go
internal/ironproxy/: embed.go  path.go  path_test.go
internal/lock/: lock.go  lock_test.go
internal/mac/: host.go  host_test.go
internal/nftscript/: nftscript.go  nftscript_test.go
internal/orchestrator/: apply_live.go  apply_live_test.go  daemon_probe.go  diff.go  diff_test.go  exec.go  format.go  format_test.go  heal.go  network.go  network_test.go  ports.go  ports_test.go  provisionprogress.go  provisionprogress_test.go  reconcile.go  reconcile_test.go  ringbuf.go  ringbuf_test.go  secret_hashes.go  secret_hashes_test.go  sessions.go  shell.go  shell_test.go  snapshot.go  snapshot_test.go  sshconfig_emit.go  status.go  status_test.go  stop.go  stop_test.go  supervision.go  supervision_test.go  terminfo.go  terminfo_test.go  timing.go
internal/portbinder/: client.go  client_test.go
internal/provision/: provision.go  provision_test.go
internal/recipes/: query.go  query_test.go  sync.go  sync_test.go
internal/reconcile/: apply_live.go  apply_live_test.go  diff.go  diff_test.go
internal/release/: install_source.go  install_source_test.go  nudge.go  nudge_test.go  release_filter.go  release_filter_test.go  version_compare.go  version_compare_test.go
internal/render/: caddyfile.go  caddyfile_test.go  devm_env.go  devm_env_test.go  dnsmasq.go  dnsmasq_test.go  hosts.go  hosts_test.go  lint.go  lint_test.go  provision.go  provision_test.go  spec.go  spec_test.go  systemd.go  systemd_test.go  templates.go  templates_test.go  write.go  write_test.go
internal/router/: caddy.go  caddy_test.go  dnscheck.go  dnscheck_test.go  resolver.go  resolver_test.go  route.go  route_test.go
internal/sandbox/: env.go  env_test.go  exec.go  sbx.go  sbx_test.go  sessions.go  sessions_test.go
internal/schema/: env.go  env_test.go  override.go  override_test.go  parity_test.go  schema.go  schema_test.go  scripts.go  scripts_test.go
internal/scripts/: bootstrap.sh  devm-exec.sh  devm-startup.sh  embed.go  init-volumes.sh  install-templates.sh  install.sh  provision.sh  s6-log.linux-amd64  s6-log.linux-arm64  with-devm-env.sh  wrap-bg.sh  wrap-fg.sh
internal/secret/: backend.go  backend_other.go  (+3 more)
recipes/: README.md  recipes_test.go
scripts/: assert-e2e-installed.sh  assert-e2e-uninstalled.sh  install.sh  install_test.sh  release.sh  release_test.sh
(+158 files in other folders)
