[project]
name = "devm-e2e"
version = "0.1.0"
description = "End-to-end tests for devm (pytest + pexpect)"
requires-python = ">=3.14"
dependencies = [
    "pytest>=8.0",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "pexpect>=4.9",
    "pyyaml>=6.0",
    "psutil>=7.2.2",
]

[tool.pytest.ini_options]
# Concurrency (-n) is controlled by scripts/run.sh's two-phase invocation:
# the parallel phase enables xdist for non-pty tests, the serial phase
# explicitly disables xdist (`-p no:xdist`) for pty tests. Leaving -n
# here would conflict with -p no:xdist in the serial phase.
addopts = "--durations=20 -ra -v"
timeout = 120
testpaths = ["."]
python_files = "test_*.py"
markers = [
    "devm: drives `devm` as the system under test (test_NN_*.py)",
    "contract: declarative upstream invariant devm depends on; if red, tart or iron-proxy broke something we use (test_tart_contract_NN_*.py, test_iron_contract_NN_*.py)",
    "slow: test involves a long-running operation (e.g. Tart image build); excluded from fast CI passes",
    "pty: uses helpers.Shell (pexpect + pty.forkpty). Must NOT run under pytest-xdist workers — those workers have a background RPC thread, and forkpty in a multi-threaded process races on lock inheritance. run.sh selects these into a single-process pass.",
    "serial: mutates global system state via `devm install` / `devm uninstall` (LaunchDaemon plist, /etc/resolver/test, system CA, tart devm-base image). Concurrent runs step on each other. run.sh selects these into the single-process pass alongside pty tests.",
    "sudo: test calls sudo directly during its body (`devm install` / `devm uninstall` / `devm service restart`). Note: every devm-marked test needs `sudo -v` primed at least once per session because the daemon-match autouse fixture may need to re-install the daemon when DEVM_BIN changes; this marker isolates the tests whose test-BODY uses sudo, useful for focused iteration on the privileged flows via `just e2e-sudo`.",
]
