[project]
name = "devm-e2e"
version = "0.1.0"
description = "End-to-end tests for devm (pytest + pexpect)"
requires-python = ">=3.14"
dependencies = [
    "pytest>=8.0",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "pexpect>=4.9",
    "pyyaml>=6.0",
    "psutil>=7.2.2",
]

[tool.pytest.ini_options]
# Concurrency (-n) is controlled by scripts/run.sh's two-phase invocation:
# the parallel phase enables xdist for non-pty tests, the serial phase
# explicitly disables xdist (`-p no:xdist`) for pty tests. Leaving -n
# here would conflict with -p no:xdist in the serial phase.
addopts = "--durations=20 -ra -v"
timeout = 120
testpaths = ["."]
python_files = "test_*.py"
markers = [
    "devm: drives `devm` as the system under test (test_NN_*.py)",
    "contract: declarative upstream invariant devm depends on; if red, tart or iron-proxy broke something we use (test_tart_contract_NN_*.py, test_iron_contract_NN_*.py)",
    "recipe: exercises one of devm's recipes end-to-end (installs the tool, runs a real workload, asserts the recipe's promised behavior). Slow — each recipe install is 5+ min. Requires network access. Kept separate from the devm marker so `just e2e-devm` stays fast and hermetic; run these via `just e2e-recipe`.",
    "slow: test involves a long-running operation (e.g. Tart image build); excluded from fast CI passes",
    "pty: uses helpers.Shell (pexpect + pty.forkpty). Must NOT run under pytest-xdist workers — those workers have a background RPC thread, and forkpty in a multi-threaded process races on lock inheritance. run.sh selects these into a single-process pass.",
    "serial: mutates global system state via `devm install` / `devm uninstall` (LaunchDaemon plist, /etc/resolver/test, system CA, tart devm-base image). Concurrent runs step on each other. run.sh selects these into the single-process pass alongside pty tests.",
]
